# Cross-Format-Documment-

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.json
backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_approval_steps.py  0003_templates_and_suggestions.py  0004_bulk_send.py  0005_production_safety.py  0006_editor_sessions.py  0007_template_ownership.py  0008_fill_profiles.py  0009_clm.py  0010_esign_integrations.py  0011_accounts_shares_billing.py  0012_workflow_recipes.py  0013_protect_stored_secrets.py  0014_packet_audit.py
backend/scripts/: check_licenses.py
backend/src/docos/: __init__.py  deps.py  main.py  settings.py
backend/src/docos/api/: __init__.py  _apply.py  _corpus.py  access.py  observability.py  patch_security.py  ratelimit.py  routes_agent.py  routes_approvals.py  routes_auth.py  routes_billing.py  routes_bulk_send.py  routes_capabilities.py  routes_clm.py  routes_comments.py  routes_documentops.py  routes_documents.py  routes_editor.py  routes_esign.py  routes_expert_ops.py  routes_export.py  routes_forms.py  routes_health.py  routes_health_panel.py  routes_idp.py  routes_integrations.py  routes_jobs.py  routes_library.py  routes_notebook.py  routes_ops_agent.py  routes_packet_audit.py  routes_packs.py  routes_pages.py  routes_patches.py  routes_presence.py  routes_profile.py  routes_query.py  routes_readiness.py  routes_recipes.py  routes_share.py  (+7 more)
backend/src/docos/db/: __init__.py  base.py  models.py
backend/src/docos/model/: __init__.py  document.py  geometry.py  ids.py  nodes.py  patch.py  serialize.py
backend/src/docos/queue/: __init__.py  celery_app.py  tasks.py
backend/src/docos/scripts/: __init__.py  seed.py
backend/src/docos/services/: __init__.py
backend/src/docos/services/auth/: passwords.py  secret_store.py  share_tokens.py  users.py
backend/src/docos/services/billing/: plans.py  stripe_checkout.py
backend/src/docos/services/clm/: clauses.py  renewals.py
backend/src/docos/services/collab/: __init__.py  approvals.py  comments.py  presence.py
backend/src/docos/services/docengine/: __init__.py  find_replace.py  interface.py  pageops.py  pdfium.py  registry.py
backend/src/docos/services/ocr/: idp.py  (+7 more)
backend/src/docos/storage/: __init__.py  blob.py  encrypted.py  local.py  s3.py
backend/tests/: conftest.py  test_access_unit.py  test_adapters_eml_json_xml.py  test_agent_brain.py  test_agent_executor.py  test_agent_quality.py  test_blob_encryption.py  test_capabilities.py  test_corpus_agent.py  test_deletion_tombstone.py  test_docling_mapper.py  test_documentops.py  test_duplicates.py  test_embeddings.py  test_engine_registry.py  test_footnotes.py  test_ingestion_safety.py  test_llm_usage.py  test_migration_recovery.py  test_ocr_consensus_review.py  test_owner_isolation.py  test_pack_catalog.py  test_pack_contracts.py  test_pack_finance.py  test_pack_hr.py  test_pack_import_export.py  test_pack_insurance.py  test_packet_audit_api.py  test_pdf_writeback_fidelity.py  test_pdfengine_parity.py  test_pdfium_render.py  test_presidio_pii.py  test_rate_limit.py  test_reader_chat.py  test_redaction_proof.py  test_restyle.py  test_retrieval_preview.py  test_scanner_clamav.py  test_scanner_content_defense.py  test_search_benchmark_metrics.py  (+10 more)
backend/tests/integration/: test_accessibility.py  test_approvals.py  test_auth_share_billing.py  test_autopilot_api.py  test_bulk_send.py  test_classify_translate.py  test_clean_api.py  test_clm.py  test_comments.py  test_conversions.py  test_corpus.py  test_crud_undo.py  test_diff_api.py  test_document_engines.py  test_drm.py  test_edit_export_preview.py  test_enterprise_hardening.py  test_esign.py  test_expert_ops_api.py  test_extract_api.py  test_fill_profile_api.py  test_find_replace_api.py  test_forms_compress.py  test_health_endpoints.py  test_idp.py  test_image_persistence.py  test_integrations.py  test_intelligence.py  test_library.py  test_more_formats.py  test_observability.py  test_pages_api.py  test_pdf_add_text_api.py  test_pdf_new_text.py  test_pdf_redaction_export.py  test_presence.py  test_protect_watermark.py  test_purge_documents.py  test_query.py  test_readiness_api.py  (+12 more)
backend/tests/stress/: __init__.py  test_platform_hardening.py
backend/tests/unit/: test_ai_interpret.py  test_approvals_logic.py  test_binary_writers.py  test_diff.py  test_docx_adapter.py  test_docx_writer.py  test_expert_spine.py  test_expert_verticals.py  test_export_redaction.py  test_export_security.py  test_extract.py  test_find_replace.py  test_health.py  test_intelligence.py  test_more_adapters.py  test_ocr_structure.py  test_ocr_tables.py  test_pageops.py  test_patches.py  test_pdf_adapter.py  test_pdf_tables.py  test_reader.py  test_readiness.py  test_readiness_html.py  test_redaction_audit.py  test_result_contract.py  test_s3_blob.py  test_sanitize_metadata.py  test_security_boundaries.py  test_sensitive.py  test_serialize.py  test_settings_llm.py  test_signing.py  test_txt_adapter.py
(+416 files in other folders)
