[project]
name = "docos"
version = "0.1.0"
description = "Cross-Format Document OS backend — canonical model + 5 services."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "celery>=5.3",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "striprtf>=0.0.26",
    "pillow>=10.2",
    "pytesseract>=0.3.10",
    "pikepdf>=8.0",
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
openai = ["openai>=1.14"]
anthropic = ["anthropic>=0.25"]
# Optional error tracking. Not installed by default; activate by installing this extra and
# setting SENTRY_DSN. Without the DSN the integration is completely inert.
sentry = ["sentry-sdk>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "stress: replacement-grade stress and regression coverage",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()`/`Query()` in argument defaults is the framework idiom,
# not a mutable-default-argument bug — the whole API layer relies on it.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
